<resources>
    <string name="app_name">IKASPENSA</string>
    <string name="app_logo">logo app</string>
    <string name="token_auth">Bearer %1$s</string>

    <string name="greetings">%1$s, \n%2$s</string>

    <string name="try_again">Silahkan coba lagi</string>
    <string name="error_logger">Error Logger</string>
    <string name="btn_back">tombol kembali</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Masuk ke akun kamu</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_login">Masuk</string>
    <string name="email_cant_empty">Email tidak boleh kosong</string>
    <string name="email_format_error">Format email salah</string>
    <string name="password_cant_empty">Kata sandi tidak boleh kosong</string>
    <string name="copyright">Copyright © 2022 jaylangkung.co.id</string>
    <string name="login_webapp">Login Web App</string>
    <string name="btn_notification">tombol notifikasi</string>
    <string name="btn_setting">tombol pengaturan</string>
    <string name="dashboard">Dashboard</string>
    <string name="currency">Rp %1$s</string>
    <string name="icon_tambahkan_deposit">icon tambahkan deposit</string>
    <string name="tambahkan_deposit">Tambahkan Deposit</string>
    <string name="icon_kurangi_deposit">icon kurangi deposit</string>
    <string name="kurangi_deposit">Kurangi Deposit</string>
    <string name="icon_riwayat_deposit">icon riwayat deposit</string>
    <string name="riwayat_deposit">Riwayat Deposit</string>
    <string name="saldo_anda_saat_ini">Saldo Anda saat ini</string>
    <string name="icon_deposit">icon deposit</string>
    <string name="deposit">Deposit</string>
    <string name="icon_tambah_subangan">icon tambah sumbangan</string>
    <string name="tambah_sumbangan">Tambah Sumbangan</string>
    <string name="btn_save">Simpan</string>
    <string name="keterangan">Keterangan</string>
    <string name="jumlah">Jumlah</string>
    <string name="icon_warning">gambar data kosong</string>
    <string name="deposit_nominal_tambah">Nominal: +Rp %1$s</string>
    <string name="deposit_nominal_kurang">Nominal: -Rp %1$s</string>
    <string name="deposit_status">Status: %1$s</string>
    <string name="sumbangan">Tambah Sumbangan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="alumni_kelas">(%1$s)</string>
    <string name="alumni_umur">(%1$s tahun)</string>
    <string name="hidup">Hidup</string>
    <string name="meninggal">Meninggal</string>
    <string name="alumni">Alumni</string>
    <string name="icon_alumni">icon daftar alumni</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="save">Simpan</string>
    <string name="setting">Pengaturan</string>
    <string name="no_telp">No Telp</string>
    <string name="icon_logout">icon logout</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Apakah Anda yakin ingin logout?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="change_photo">Ganti Foto</string>
    <string name="rekening_donasi">Rekening Donasi: %1$s</string>
    <string name="voting_foto">Voting Foto</string>
    <string name="icon_voting_foto">icon voting foto</string>
    <string name="gambar_voting">gambar voting</string>
    <string name="voting_name_love">%1$s | Love: %2$s</string>
    <string name="voting_love">Vote</string>
    <string name="icon_tambah_sumbangan">icon tambah sumbangan</string>

</resources>