<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context="com.jaylangkung.ikaspensa.MainActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="10dp"
        tools:src="@drawable/ic_profile" />

    <TextView
        android:id="@+id/tv_greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="sans-serif-black"
        android:text=""
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ll_body"
        app:layout_constraintStart_toEndOf="@+id/img_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_setting"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_setting"
        app:layout_constraintBottom_toTopOf="@+id/ll_body"
        app:layout_constraintEnd_toStartOf="@+id/btn_notification"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/btn_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btn_notification"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_notification"
        app:layout_constraintBottom_toTopOf="@+id/ll_body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:background="@drawable/home_bg">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_login_web_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:src="@drawable/ic_scan_qr"
        app:fab_colorNormal="@color/secondaryColor"
        app:fab_colorPressed="@color/secondaryDarkColor"
        app:fab_colorRipple="@color/secondaryColor"
        app:fab_label="@string/login_webapp"
        app:fab_size="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>